--- a/pages/resources.html
+++ b/pages/resources.html
@@ -37,7 +37,7 @@
         </a>
     </div>
     <div class="link-box">
-        <a href="http://www.springerlink.com/home/main.mpx" target="_blank">
+        <a href="https://link.springer.com" target="_blank">
             <img src="./assets/resources/links-icon-springerlink.gif" alt="" width="18" height="18"> SpringerLink
         </a>
     </div>
@@ -62,12 +62,12 @@
         </a>
     </div>
     <div class="link-box">
-        <a href="http://academic.research.microsoft.com/RankList?entitytype=3&amp;topDomainID=2&amp;subDomainID=0" target="_blank">
+        <a href="https://www.microsoft.com/en-us/research/project/academic/" target="_blank">
             <img src="./assets/resources/icon-links.gif" alt="" width="18" height="18"> Microsoft academic search
         </a>
     </div>
     <div class="link-box">
-        <a href="http://gen.lib.rus.ec/" target="_blank">
+        <a href="http://libgen.rs" target="_blank">
             <img src="./assets/resources/icon-links.gif" alt="" width="18" height="18"> Library Genesis
         </a>
     </div>
@@ -77,17 +77,17 @@
         </a>
     </div>
     <div class="link-box">
-        <a href="http://academic.research.microsoft.com/" target="_blank">
+        <a href="https://www.microsoft.com/en-us/research/project/academic/" target="_blank">
             <img src="./assets/resources/links-icon-mas.gif" alt="" width="18" height="18"> Microsoft Academic Search
         </a>
     </div>
     <div class="link-box">
-        <a href="http://ieeexplore.ieee.org/Xplore/DynWel.jsp" target="_blank">
+        <a href="https://ieeexplore.ieee.org/Xplore/home.jsp" target="_blank">
             <img src="./assets/resources/links-icon-ieeexplore.gif" alt="" width="18" height="18"> IEEE Xplore
         </a>
     </div>
     <div class="link-box">
-        <a href="http://www.bgu.ac.il/aranne/" target="_blank">
+        <a href="https://in.bgu.ac.il/aranne/Pages/default.aspx" target="_blank">
             <img src="./assets/resources/links-icon-bguarannelib.gif" alt="" width="18" height="18"> BGU Aranne Library home page
         </a>
     </div>
@@ -97,7 +97,7 @@
         </a>
     </div>
     <div class="link-box">
-        <a href="http://libguides.bgu.ac.il/medlibe" target="_blank">
+        <a href="https://libguides.bgu.ac.il/medical_library_home_heb" target="_blank">
             <img src="./assets/resources/icon-links.gif" alt="" width="18" height="18"> BGU Medical Library
         </a>
     </div>
@@ -149,12 +149,12 @@
         </a>
     </div>
     <div class="link-box">
-        <a href="http://www3.ntu.edu.sg/home/assourav/crank.htm" target="_blank">
+        <a href="https://www.ntu.edu.sg/about-us/facts-figures/university-rankings" target="_blank">
             <img src="./assets/resources/icon-links.gif" alt="" width="18" height="18"> CSRankings
         </a>
     </div>
     <div class="link-box">
-        <a href="https://ezproxy.bgu.ac.il/login?url=https://jcr.clarivate.com" target="_blank">
+        <a href="https://jcr.clarivate.com" target="_blank">
             <img src="./assets/resources/links-icon-isi.gif" alt="" width="18" height="18"> WOS Journal Citation Report
         </a>
     </div>
@@ -187,12 +187,12 @@
 </div>
 
     <div class="link-box">
-        <a href="http://www.sciencedirect.com/science?_ob=JournalURL&amp;_cdi=6750&amp;_auth=y&amp;_acct=C000022720&amp;_version=1&amp;_urlVersion=0&amp;_userid=483702&amp;md5=069d0defa21f28398d11a6abc92b4832" target="_blank">
+        <a href="https://www.sciencedirect.com/journal/computer-vision-and-image-understanding" target="_blank">
             <img src="./assets/resources/icon-links.gif" alt="" width="18" height="18"> Computer Vision and Image Understanding
         </a>
     </div>
     <div class="link-box">
-        <a href="http://www.sciencedirect.com/science?_ob=JournalURL&amp;_cdi=6764&amp;_auth=y&amp;_acct=C000022720&amp;_version=1&amp;_urlVersion=0&amp;_userid=483702&amp;md5=ededdfe6832ddcd0d03ec16bbd67c8d4" target="_blank">
+        <a href="https://elsevier.marketing/journal/CVGIP--Image-Understanding" target="_blank">
             <img src="./assets/resources/icon-links.gif" alt="" width="18" height="18"> CVGIP: Image Understanding
         </a>
     </div>
@@ -202,7 +202,7 @@
         </a>
     </div>
     <div class="link-box">
-        <a href="http://www.sciencedirect.com/science?_ob=JournalURL&amp;_cdi=5641&amp;_auth=y&amp;_acct=C000022720&amp;_version=1&amp;_urlVersion=0&amp;_userid=483702&amp;md5=365e03c400624d13b641fcc72d51215a" target="_blank">
+        <a href="https://www.sciencedirect.com/journal/image-and-vision-computing/issues" target="_blank">
             <img src="./assets/resources/icon-links.gif" alt="" width="18" height="18"> Image and Vision Computing
         </a>
     </div>
@@ -400,7 +400,7 @@
         </a>
     </div>
     <div class="link-box">
-        <a href="http://illusioncontest.neuralcorrelate.com/" target="_blank">
+        <a href="https://illusionoftheyear.com/" target="_blank">
             <img src="./assets/resources/links-icon-best-illusion.gif" alt="" width="18" height="18"> Best illusion of the year contest
         </a>
     </div>
@@ -415,7 +415,7 @@
         </a>
     </div>
     <div class="link-box">
-        <a href="http://psylux.psych.tu-dresden.de/i1/kaw/diverses%20Material/www.illusionworks.com/" target="_blank">
+        <a href="https://www.illusionworks.com" target="_blank">
             <img src="./assets/resources/links-icon-illusion-works.gif" alt="" width="18" height="18"> IllusionWorks (mirror)
         </a>
     </div>
@@ -435,12 +435,12 @@
         </a>
     </div>
     <div class="link-box">
-        <a href="http://www.blelb.ch/oldblelbsite/english/blelbspots/blelbspots_en.htm" target="_blank">
+        <a href="https://www.blelb.ch/blelbspots_en.html" target="_blank">
             <img src="./assets/resources/icon-links.gif" alt="" width="18" height="18"> The Blelb spots
         </a>
     </div>
     <div class="link-box">
-        <a href="http://viperlib.york.ac.uk/" target="_blank">
+        <a href="https://www-users.york.ac.uk/~pt2/html/viperlib.html" target="_blank">
             <img src="./assets/resources/links-icon-viperlib.gif" alt="" width="18" height="18"> Viperlib
         </a>
     </div>
