tmp fix for fetchPublication function. this is not final version of it

--- a/pages/publications.html
+++ b/pages/publications.html
@@ -1,9 +1,8 @@
 <!-- this page is built using the script in js/publications.js. when new publication is added, need to enable
-this code:
-            // if (page === 'pages/publications.html') {
-            //     fetchPublications();
-            // }
-in scripts.js until we will have api key to fetch the publications dynamically
+this code in loadcontent.js:
+else{
+            fetchPublications();
+	}
 -->
 <!DOCTYPE html>
 <html lang="en">
