--- a/pages/header.html
+++ b/pages/header.html
@@ -27,10 +27,10 @@
                 <li><a href="pages/grad-positions.html">Grad Positions</a></li>
                 <li><a href="pages/senior-projects.html">Senior Projects</a></li>
                 <li>
-                    <div class="theme-toggle" id="theme-toggle" onclick="toggleTheme()">
-                        <img src="/ICVL/assets/dark.png" alt="Dark Mode Icon" class="theme-icon" id="dark-icon">&nbsp;
-                        <img src="/ICVL/assets/light.png" alt="Light Mode Icon" class="theme-icon" id="light-icon">
-                    </div>
+                <div class="theme-toggle" id="theme-toggle">
+                    <img src="/ICVL/assets/dark.png" alt="Dark Mode Icon" class="theme-icon" id="dark-icon" onclick="toggleTheme('dark')">&nbsp;
+                    <img src="/ICVL/assets/light.png" alt="Light Mode Icon" class="theme-icon" id="light-icon" onclick="toggleTheme('light')">
+                </div>
                 </li>
             </ul>
         </nav>
