--- a/pages/footer.html
+++ b/pages/footer.html
@@ -1,12 +1,19 @@
+<html>
+<head>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <title>footer</title>
+</head>
 <footer>
+
     <div class="contact-info">
-        <p>Email: <a href="mailto:ICVL@cs.bgu.ac.il">ICVL@cs.bgu.ac.il</a></p>
-        <p>Director: <a href="mailto:obs@bgu.ac.il">Prof. Ohad Ben-Shahar</a></p>
-        <p>Seminar Coordinator: <a href="mailto:brahan@post.bgu.ac.il">Brahan Wassan</a></p>
-        <p>Web Master: <a href="mailto:alfit@post.bgu.ac.il">Tal Alfi</a></p>
+        <p><i class="fas fa-envelope"></i> Email: <a href="mailto:ICVL@cs.bgu.ac.il">ICVL@cs.bgu.ac.il</a></p>
+        <p><i class="fas fa-user"></i> Director: <a href="mailto:obs@bgu.ac.il">Prof. Ohad Ben-Shahar</a></p>
+        <p><i class="fas fa-user"></i> Seminar Coordinator: <a href="mailto:brahan@post.bgu.ac.il">Brahan Wassan</a></p>
+        <p><i class="fas fa-user"></i> Web Master: <a href="mailto:alfit@post.bgu.ac.il">Tal Alfi</a></p>
     </div>
     <div class="address">
-        <p>Address: The interdisciplinary Computational Vision Laboratory (ICVL), Computer Science Department, Ben-Gurion University, P.O.Box 653, Beer-Sheva 84105, Israel</p>
-        <p>Location: BGU Campus, Building 37, Lab -103 (one floor below ground level)</p>
+        <p><i class="fas fa-map-marker-alt"></i> Address:<br> The interdisciplinary Computational Vision<br>  Laboratory (ICVL),<br>  Computer Science Department, <br> Ben-Gurion University, <br> P.O.Box 653, Beer-Sheva 84105, Israel</p>
+        <p><i class="fas fa-location-arrow"></i> Locations in BGU Campus :<br>Building 37, Lab -103 (one floor below ground level)<br> Building 42, Lab -119 (one floor below ground level)</p>
     </div>
 </footer>
+</html>
