missing div FFS

--- a/pages/members.html
+++ b/pages/members.html
@@ -363,6 +363,7 @@
             </div>
         </div>
     </main>
+    </div>
     <div id="footer-placeholder"></div>
     <script src="/ICVL/js/loadMembers.js"></script>
     <script src="/ICVL/js/loadContent.js"></script>
