Fixes from Ohad

--- a/pages/grad-positions.html
+++ b/pages/grad-positions.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grad Positions</title>
+    <title>Grad Projects</title>
     <base href="/ICVL/">
     <link rel="stylesheet" href="css/all.css">
 </head>
@@ -13,7 +13,7 @@
 <main id="content">
     <section class="grad-positions">
 
-<h1 >Graduate student and postdoc positions:</h1>
+<h1 >Graduate Projects:</h1>
 <p>We always look for excellent graduate students or postdocs to join the lab, (including interns from the Dkalim, Ashalim, and Eitan programs). If any of the vision sciences catches your imagination and research is your passion, please do <a href="mailto:iCVL@cs.bgu.ac.il" role="link">contact us</a> to tell us about yourself and learn more about the lab and its research. Research positions for the 2020/2021 academic year are described in this page. Unless stated differently, most projects offer opportunities at all of the M.Sc., Ph.D., and Postdoc levels.</p>
     </section>
 <section class="grad-positions">
