--- a/pages/research.html
+++ b/pages/research.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Researches</title>
+    <title>Research</title>
     <base href="/ICVL/">
     <link rel="stylesheet" href="css/all.css">
 </head>
@@ -73,7 +73,7 @@
     </div>
 
     <div class="research-item">
-        <a href="https://icvl.cs.bgu.ac.il/the-owlcam-project/">
+        <a href="pages/researches/OwlCam_Project.html">
             <img src="./assets/research/gifs/projects-index-OwlCam-anim.gif" alt="The OwlCam Project">
             <p>The OwlCam Project</p>
         </a>
@@ -115,7 +115,7 @@
         </a>
     </div>
     <div class="research-item">
-        <a href="https://icvl.cs.bgu.ac.il/perceptual-singularities/">
+        <a href="pages/researches/Perceptual_singularities.html">
             <img src="./assets/research/gifs/projects-index-PSinOBTS-anim.gif" alt="Perceptual Singularities without Feature Gradient">
             <p>Perceptual Singularities without Feature Gradient</p>
         </a>
