--- a/pages/header.html
+++ b/pages/header.html
@@ -4,6 +4,9 @@
             <img src="/ICVL/assets/logo_icvl.png" id="logo" alt="ICVL Logo" class="logo">
             <img src="/ICVL/assets/textual.png" id="text" alt="ICVL Text Logo" class="text">
         </a>
+        <a href="https://www.bgu.ac.il/">
+            <img src="/ICVL/assets/bgu.png" id="bgu" alt="BGU Logo" class="bgu">
+        </a>
         <div class="menu-icon" onclick="toggleMenu()">
             <div class="bar"></div>
             <div class="bar"></div>
