more bug fixes reported by keren

--- a/pages/researches/Perceptual_singularities.html
+++ b/pages/researches/Perceptual_singularities.html
@@ -15,6 +15,7 @@
         <section class="research-section">
             <h2>Perceptual Singularities</h2>
             <p>Under Construction</p>
+        </section>
         </main>
     </div>
     <div id="footer-placeholder"></div>
