--- a/pages/researches/Shape_from_Specular_Flow.html
+++ b/pages/researches/Shape_from_Specular_Flow.html
@@ -26,10 +26,10 @@
                         <img src="./assets/research/Shape-from-Specular-Flow/mirror-ball-reflection.jpg" alt="Mirror Ball Reflection" width="330">
                     </figure>
                     <figure>
-                        <img src="./assets/research/Shape-from-Specular-Flow/IMG_1401.JPG" alt="IMG 1401" width="330">
+                        <img src="./assets/research/Shape-from-Specular-Flow/IMG_1401.jpg" alt="IMG 1401" width="330">
                     </figure>
                     <figure>
-                        <img src="./assets/research/Shape-from-Specular-Flow/IMG_1394.JPG" alt="Liana being silly in Chicago" width="330">
+                        <img src="./assets/research/Shape-from-Specular-Flow/IMG_1394.jpg" alt="Liana being silly in Chicago" width="330">
                     </figure>
                 </div>
 
@@ -58,12 +58,12 @@
 
                 <h2>Papers</h2>
                 <ul>
-                    <li>Y. Adato and O. Ben-Shahar, <strong><a href="https://www.cs.bgu.ac.il/~ben-shahar/Publications/2011-Adato_and_Ben_Shahar-Specular_Flow_and_Shape_in_One_Shot.pdf">Specular Shape and Specular Flow in One Shot</a></strong>, In the <em>Proceedings of the British Machine Vision Conference (BMVC)</em>, Dundee, Scotland, August 2011.</li>
-                    <li>Y. Adato, Y. Vasilyev, T. Zickler, and O. Ben-Shahar, <strong><a href="https://www.cs.bgu.ac.il/~ben-shahar/Publications/2010-Adato_Vasilyev_Zickler_and_Ben_Shahar-Shape_from_Specular_Flow.pdf">Shape from Specular Flow</a></strong>, <em>IEEE Transaction on Pattern Analysis and Machine Intelligence (PAMI)</em>, 32(11), 2054-2070, 2010</li>
-                    <li>Y. Adato, T. Zickler, and O. Ben-Shahar, <strong><a href="https://www.cs.bgu.ac.il/~ben-shahar/Publications/2010-Adato_Zickler_and_Ben_Shahar-Towards_Robust_Computation_of_Specular_Flow.pdf">Towards Robust Computation of Specular Flow</a></strong>, In the <em>Proceedings of the British Machine Vision Conference (BMVC)</em>, Aberystwyth, UK, August 2010.</li>
-                    <li>Canas, G.D., Y. Vasilyev, Y. Adato, T. Zickler, S. Gortler, and O. Ben-Shahar, <strong><a href="https://www.cs.bgu.ac.il/~ben-shahar/Publications/2009-Canas_Vasilyev_Adato_Zickler_Gortler_and_Ben_Shahar-A_Linear_Formulation_of_Shape_from_Specular_Flow.pdf">A Linear Formulation of Shape from Specular Flow</a></strong>, In the <em>Proceedings of the IEEE International Conference on Computer Vision (ICCV)</em>, Kyoto, Japan, September 2009.</li>
-                    <li>Y. Vasilyev, Y. Adato, T. Zickler, and O. Ben-Shahar, <strong><a href="https://www.cs.bgu.ac.il/~ben-shahar/Publications/2008-Vasilyev_Adato_Zickler_and_Ben_Shahar-Dense_Specular_Shape_from_Multiple_Specular_Flows.pdf">Dense Specular Shape from Multiple Specular Flows</a></strong>, In the <em>Proceedings of the IEEE International Conference on Computer Vision and Pattern Recognition (CVPR)</em>, Anchorage, Alaska, June 2008.</li>
-                    <li>Y. Adato, Y. Vasilyev, O. Ben-Shahar, and T. Zickler, <strong><a href="https://www.cs.bgu.ac.il/~ben-shahar/Publications/2007-Adato_Vasilyev_Ben_Shahar_and_Zickler-Toward_a_Theory_of_Shape_from_Specular_Flow.pdf">Toward a Theory of Shape from Specular Flow</a></strong>, In the <em>Proceedings of the IEEE International Conference on Computer Vision (ICCV)</em>, Rio de Janeiro, Brazil, October 14-20, 2007.</li>
+                    <li>Y. Adato and O. Ben-Shahar, <a href="https://www.cs.bgu.ac.il/~ben-shahar/Publications/2011-Adato_and_Ben_Shahar-Specular_Flow_and_Shape_in_One_Shot.pdf">Specular Shape and Specular Flow in One Shot</a>, In the <em>Proceedings of the British Machine Vision Conference (BMVC)</em>, Dundee, Scotland, August 2011.</li>
+                    <li>Y. Adato, Y. Vasilyev, T. Zickler, and O. Ben-Shahar, <a href="https://www.cs.bgu.ac.il/~ben-shahar/Publications/2010-Adato_Vasilyev_Zickler_and_Ben_Shahar-Shape_from_Specular_Flow.pdf">Shape from Specular Flow</a>, <em>IEEE Transaction on Pattern Analysis and Machine Intelligence (PAMI)</em>, 32(11), 2054-2070, 2010</li>
+                    <li>Y. Adato, T. Zickler, and O. Ben-Shahar, <a href="https://www.cs.bgu.ac.il/~ben-shahar/Publications/2010-Adato_Zickler_and_Ben_Shahar-Towards_Robust_Computation_of_Specular_Flow.pdf">Towards Robust Computation of Specular Flow</a>, In the <em>Proceedings of the British Machine Vision Conference (BMVC)</em>, Aberystwyth, UK, August 2010.</li>
+                    <li>Canas, G.D., Y. Vasilyev, Y. Adato, T. Zickler, S. Gortler, and O. Ben-Shahar, <a href="https://www.cs.bgu.ac.il/~ben-shahar/Publications/2009-Canas_Vasilyev_Adato_Zickler_Gortler_and_Ben_Shahar-A_Linear_Formulation_of_Shape_from_Specular_Flow.pdf">A Linear Formulation of Shape from Specular Flow</a>, In the <em>Proceedings of the IEEE International Conference on Computer Vision (ICCV)</em>, Kyoto, Japan, September 2009.</li>
+                    <li>Y. Vasilyev, Y. Adato, T. Zickler, and O. Ben-Shahar, <a href="https://www.cs.bgu.ac.il/~ben-shahar/Publications/2008-Vasilyev_Adato_Zickler_and_Ben_Shahar-Dense_Specular_Shape_from_Multiple_Specular_Flows.pdf">Dense Specular Shape from Multiple Specular Flows</a>, In the <em>Proceedings of the IEEE International Conference on Computer Vision and Pattern Recognition (CVPR)</em>, Anchorage, Alaska, June 2008.</li>
+                    <li>Y. Adato, Y. Vasilyev, O. Ben-Shahar, and T. Zickler, <a href="https://www.cs.bgu.ac.il/~ben-shahar/Publications/2007-Adato_Vasilyev_Ben_Shahar_and_Zickler-Toward_a_Theory_of_Shape_from_Specular_Flow.pdf">Toward a Theory of Shape from Specular Flow</a>, In the <em>Proceedings of the IEEE International Conference on Computer Vision (ICCV)</em>, Rio de Janeiro, Brazil, October 14-20, 2007.</li>
                 </ul>
 
                 <h2>Acknowledgments</h2>
