--- a/pages/header.html
+++ b/pages/header.html
@@ -27,8 +27,8 @@
                 <li><a href="pages/seminar.html">Seminar</a></li>
 <!--                <li><a href="pages/gallery.html">Gallery</a></li>-->
                 <li><a href="pages/resources.html">Resources</a></li>
-                <li><a href="pages/grad-positions.html">Grad Projects</a></li>
-                <li><a href="pages/senior-projects.html">Undergrad Projects</a></li>
+                <li><a href="pages/grad-projects.html">Grad Projects</a></li>
+                <li><a href="pages/undergrad-projects.html">Undergrad Projects</a></li>
                 <li>
                 <div class="theme-toggle" id="theme-toggle">
                     <img src="/ICVL/assets/dark.png" alt="Dark Mode Icon" class="theme-icon" id="dark-icon" onclick="toggleTheme('dark')">&nbsp;
