--- a/pages/researches/Repair.html
+++ b/pages/researches/Repair.html
@@ -34,14 +34,23 @@
                 <figure>
                     <img src="./assets/research/repair/3.png" alt="Algorithm analyzing fresco fragments">
                 </figure>
+                            </section>
+
+            <section class="research-section">
 
                 <h2>Code / Data</h2>
                 <p>The RePAIR project's official GitHub repository hosts code and datasets relevant to the reconstruction work, allowing researchers and developers alike to explore and contribute to the ongoing efforts.</p>
+                            </section>
+
+            <section class="research-section">
 
                 <h2>Published Papers</h2>
                 <ul>
                     <li>M. C. Napolitano et al., <a href="https://example.com/link_to_paper">The Dataset of Paintings from the Pompeii Archive: A Task of the RePAIR Project</a>, In the Proceedings of Pictura Parietum. Connessioni mediterranee in età ellenistica e romana (AIRPA VI), Agrigento, Italy, July 2023.</li>
                 </ul>
+                            </section>
+
+            <section class="research-section">
 
                 <h2>Acknowledgments</h2>
                 <p>The RePAIR project is proudly supported by the EU under the Horizon 2020 program.</p>
