--- a/pages/footer.html
+++ b/pages/footer.html
@@ -7,12 +7,12 @@
 
     <div class="contact-info">
         <p><i class="fas fa-envelope"></i> Email: <a href="mailto:ICVL@cs.bgu.ac.il">ICVL@cs.bgu.ac.il</a></p>
-        <p><i class="fas fa-user"></i> Director: <a href="mailto:obs@bgu.ac.il">Prof. Ohad Ben-Shahar</a></p>
+        <p><i class="fas fa-user"></i> Director: <a href="mailto:ben-shahar@cs.bgu.ac.il">Prof. Ohad Ben-Shahar</a></p>
         <p><i class="fas fa-user"></i> Seminar Coordinator: <a href="mailto:brahan@post.bgu.ac.il">Brahan Wassan</a></p>
         <p><i class="fas fa-user"></i> Web Master: <a href="mailto:alfit@post.bgu.ac.il">Tal Alfi</a></p>
     </div>
     <div class="address">
-        <p><i class="fas fa-map-marker-alt"></i> Address:<br> The interdisciplinary Computational Vision<br>  Laboratory (ICVL),<br>  Computer Science Department, <br> Ben-Gurion University, <br> P.O.Box 653, Beer-Sheva 84105, Israel</p>
+        <p><i class="fas fa-map-marker-alt"></i> Address:<br> The Interdisciplinary Computational Vision<br>  Laboratory (ICVL),<br>  Computer Science Department, <br> Ben-Gurion University, <br> P.O.Box 653, Beer-Sheva 84105, Israel</p>
         <p><i class="fas fa-location-arrow"></i> Locations in BGU Campus :<br>Building 37, Lab -103 (one floor below ground level)<br> Building 42, Lab -119 (one floor below ground level)</p>
     </div>
 </footer>
