Fix path to root V.2

--- a/pages/header.html
+++ b/pages/header.html
@@ -1,11 +1,11 @@
 <header>
     <div class="logo-container">
         <a href="index.html">
-            <img src="/ICVL/assets/logo_icvl.png" id="logo" alt="ICVL Logo" class="logo">
-            <img src="/ICVL/assets/textual.png" id="text" alt="ICVL Text Logo" class="text">
+            <img src="./assets/logo_icvl.png" id="logo" alt="ICVL Logo" class="logo">
+            <img src="./assets/textual.png" id="text" alt="ICVL Text Logo" class="text">
         </a>
         <a href="https://www.bgu.ac.il/">
-            <img src="/ICVL/assets/bgu.png" id="bgu" alt="BGU Logo" class="bgu">
+            <img src="./assets/bgu.png" id="bgu" alt="BGU Logo" class="bgu">
         </a>
         <div class="menu-icon" onclick="toggleMenu()">
             <div class="bar"></div>
@@ -17,7 +17,7 @@
         <nav>
             <ul id="nav-list">
                 <li><a href="./index.html" >
-                    <img src="/ICVL/assets/home.png" alt="Home Icon"  class="home-icon">
+                    <img src="./assets/home.png" alt="Home Icon"  class="home-icon">
                 </a>
                 </li>
                 <li><a href="pages/about.html">About</a></li>
@@ -31,8 +31,8 @@
                 <li><a href="pages/undergrad-projects.html">Undergrad Projects</a></li>
                 <li>
                 <div class="theme-toggle" id="theme-toggle">
-                    <img src="/ICVL/assets/dark.png" alt="Dark Mode Icon" class="theme-icon" id="dark-icon" onclick="toggleTheme('dark')">&nbsp;
-                    <img src="/ICVL/assets/light.png" alt="Light Mode Icon" class="theme-icon" id="light-icon" onclick="toggleTheme('light')">
+                    <img src="./assets/dark.png" alt="Dark Mode Icon" class="theme-icon" id="dark-icon" onclick="toggleTheme('dark')">&nbsp;
+                    <img src="./assets/light.png" alt="Light Mode Icon" class="theme-icon" id="light-icon" onclick="toggleTheme('light')">
                 </div>
                 </li>
             </ul>
