--- a/pages/publications.html
+++ b/pages/publications.html
@@ -10,7 +10,7 @@ else{
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Publications</title>
-    <base href="/ICVL/">
+    <base href="../">
     <link rel="stylesheet" href="css/all.css">
 </head>
 <body>
@@ -1073,6 +1073,6 @@ else{
         </main>
     </div>
     <div id="footer-placeholder"></div>
-    <script src="/ICVL/js/loadContent.js"></script>
+    <script src="./js/loadContent.js"></script>
 </body>
 </html>
