--- a/pages/about.html
+++ b/pages/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About ICVL</title>
-    <base href="/ICVL/">
+    <base href="../">
     <link rel="stylesheet" href="css/all.css">
 </head>
 <body>
@@ -41,6 +41,6 @@
        </main>
     </div>
     <div id="footer-placeholder"></div>
-    <script src="/ICVL/js/loadContent.js"></script>
+    <script src="./js/loadContent.js"></script>
 </body>
 </html>
