--- a/pages/members.html
+++ b/pages/members.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Members</title>
-    <base href="/ICVL/">
+    <base href="../">
     <link rel="stylesheet" href="css/all.css">
 </head>
 <body>
@@ -365,7 +365,7 @@
     </main>
     </div>
     <div id="footer-placeholder"></div>
-    <script src="/ICVL/js/loadMembers.js"></script>
-    <script src="/ICVL/js/loadContent.js"></script>
+    <script src="./js/loadMembers.js"></script>
+    <script src="./js/loadContent.js"></script>
 </body>
 </html>
