--- a/pages/researches/Computational-Polygonal-Puzzle-Solving.html
+++ b/pages/researches/Computational-Polygonal-Puzzle-Solving.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Computational Polygonal Puzzle Solving</title>
-    <base href="/ICVL/">
+    <base href="../../">
     <link rel="stylesheet" href="css/all.css">
 
 </head>
@@ -113,6 +113,6 @@
         </main>
     </div>
     <div id="footer-placeholder"></div>
-    <script src="/ICVL/js/loadContent.js"></script>
+    <script src="./js/loadContent.js"></script>
 </body>
 </html>
