--- a/pages/researches/Symmetry_And_Pose_Estimation_In_3D_Data.html
+++ b/pages/researches/Symmetry_And_Pose_Estimation_In_3D_Data.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Symmetry and Pose Estimation in 3D Data</title>
-    <base href="/ICVL/">
+    <base href="../../">
     <link rel="stylesheet" href="css/all.css">
 </head>
 <body>
@@ -39,6 +39,6 @@
         </main>
     </div>
     <div id="footer-placeholder"></div>
-    <script src="/ICVL/js/loadContent.js"></script>
+    <script src="./js/loadContent.js"></script>
 </body>
 </html>
