--- a/pages/resources.html
+++ b/pages/resources.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resources</title>
-    <base href="/ICVL/">
+    <base href="../">
     <link rel="stylesheet" href="css/all.css">
 </head>
 <body>
@@ -448,6 +448,6 @@
         </main>
     </div>
     <div id="footer-placeholder"></div>
-    <script src="/ICVL/js/loadContent.js"></script>
+    <script src="./js/loadContent.js"></script>
 </body>
 </html>
