--- a/pages/undergrad-projects.html
+++ b/pages/undergrad-projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Senior projects</title>
-    <base href="/ICVL/">
+    <base href="../">
     <link rel="stylesheet" href="css/all.css">
 
 </head>
@@ -90,6 +90,6 @@
                     </main>
     </div>
     <div id="footer-placeholder"></div>
-    <script src="/ICVL/js/loadContent.js"></script>
+    <script src="./js/loadContent.js"></script>
 </body>
 </html>
