--- a/pages/researches/hyperspectral-imaging.html
+++ b/pages/researches/hyperspectral-imaging.html
@@ -44,7 +44,7 @@
     <p>The dataset images were acquired using a Specim PS Kappa DX4 hyperspectral camera and a rotary stage for spatial scanning. At this time it contains 200 images and will continue to grow progressively.</p>
     <p>Images were collected at 1392×1300 spatial resolution over 519 spectral bands (400-1,000nm at roughly 1.25nm increments). The <strong>.raw</strong>&nbsp;files contain raw out-of-camera data in ENVI format and&nbsp;<strong>.hdr&nbsp;</strong>files contain the headers required to decode them. For your convenience,&nbsp;<strong>.mat</strong> files are provided, downsampled to 31 spectral channels from 400nm to 700nm at 10nm increments.</p>
     <p>
-        <a href="https://bgu365.sharepoint.com/:f:/s/ICVL/EiSbs3hD6WNBmPNbDLFFjosB0oZVCNJRUCuUWTDGSQj0rQ?e=KtaEjC">BGU ICVL Hyperspectral Dataset</a></p>
+        <a href="https://bgu365.sharepoint.com/:f:/s/ICVL/EiSbs3hD6WNBmPNbDLFFjosB0oZVCNJRUCuUWTDGSQj0rQ?e=KtaEjC" target="_blank">BGU ICVL Hyperspectral Dataset</a></p>
     <p>When used, fully or partially, please cite “Arad and Ben-Shahar, Sparse Recovery of Hyperspectral Signal from Natural RGB Images, in the European Conference on Computer Vision, Amsterdam, The Netherlands, October 11–14, 2016”</p>
     <pre>@inproceedings{arad_and_ben_shahar_2016_ECCV,
         title={Sparse Recovery of Hyperspectral Signal from Natural RGB Images},
