--- a/pages/research.html
+++ b/pages/research.html
@@ -19,104 +19,104 @@
 <div class="research-grid">
     <div class="research-item">
         <a href="pages/researches/Multi-Phase-Relaxation.html">
-            <img src="./assets/research/gifs/multi-phase_rl_for_puzzles_featured_image-1.gif" alt="Multi-Phase Relaxation Labeling for Square Jigsaw Puzzle Solving">
+            <img src="./assets/research/gifs/multi-phase_rl_for_puzzles_featured_image-1.gif" alt="Multi-Phase Relaxation Labeling for Square Jigsaw Puzzle Solving" loading="lazy">
             <p>Multi-Phase Relaxation Labeling for Square Jigsaw Puzzle Solving</p>
         </a>
     </div>
     <div class="research-item">
         <a href="pages/researches/Repair.html">
-            <img src="./assets/research/gifs/reserach-repair.gif" alt="Convex Partition Jigsaw Puzzle Solving">
+            <img src="./assets/research/gifs/reserach-repair.gif" alt="Convex Partition Jigsaw Puzzle Solving" loading="lazy">
             <p>Archeological Puzzle solving</p>
         </a>
     </div>
     <div class="research-item">
         <a href="pages/researches/Computational-Polygonal-Puzzle-Solving.html">
-            <img src="./assets/research/gifs/apictorial_polygonal_reconstruction3.gif" alt="Computational Polygonal Puzzle Solving">
+            <img src="./assets/research/gifs/apictorial_polygonal_reconstruction3.gif" alt="Computational Polygonal Puzzle Solving" loading="lazy">
             <p>Computational Polygonal Puzzle Solving</p>
         </a>
     </div>
     <div class="research-item">
         <a href="pages/researches/Square-Jigsaw-Puzzle-Solving.html">
-            <img src="./assets/research/gifs/projects-index-jigsaw-anim.gif" alt="Square Jigsaw Puzzle Solving">
+            <img src="./assets/research/gifs/projects-index-jigsaw-anim.gif" alt="Square Jigsaw Puzzle Solving" loading="lazy">
             <p>Square Jigsaw Puzzle Solving</p>
         </a>
     </div>
     <div class="research-item">
         <a href="pages/researches/hyperspectral-imaging.html">
-            <img src="./assets/research/gifs/hs-animation1.gif" alt="Hyperspectral Imaging from low cost sensors">
+            <img src="./assets/research/gifs/hs-animation1.gif" alt="Hyperspectral Imaging from low cost sensors" loading="lazy">
             <p>Hyperspectral Imaging from low cost sensors</p>
         </a>
     </div>
         <div class="research-item">
         <a href="pages/researches/Convex_Partition_Jigsaw_Puzzle_Solving.html">
-            <img src="./assets/research/gifs/Convex-Pratition.gif" alt="Convex Partition Jigsaw Puzzle Solving">
+            <img src="./assets/research/gifs/Convex-Pratition.gif" alt="Convex Partition Jigsaw Puzzle Solving" loading="lazy">
             <p>Convex Partition Jigsaw Puzzle Solving</p>
         </a>
     </div>
     <div class="research-item">
                 <a href="pages/researches/Archerfish-Vision.html">
-                    <img src="./assets/research/gifs/projects-index-CVwVC-anim.gif" alt="Archerfish Vision">
+                    <img src="./assets/research/gifs/projects-index-CVwVC-anim.gif" alt="Archerfish Vision" loading="lazy">
             <p>Archerfish Vision</p>
         </a>
     </div>
     <div class="research-item">
             <a href="pages/researches/Curve-completion-in-the-tangent-bundle.html">
-            <img src="./assets/research/gifs/projects-index-CCinTB-anim.gif" alt="Curve completion in the tangent bundle">
+            <img src="./assets/research/gifs/projects-index-CCinTB-anim.gif" alt="Curve completion in the tangent bundle" loading="lazy">
             <p>Curve completion in the tangent bundle</p>
         </a>
     </div>
     <div class="research-item">
             <a href="pages/researches/Agrovision.html">
-            <img src="./assets/research/gifs/20150909_135657_online-video-cutter-1.gif" alt="Agrovision">
+            <img src="./assets/research/gifs/20150909_135657_online-video-cutter-1.gif" alt="Agrovision" loading="lazy">
             <p>Agrovision</p>
         </a>
     </div>
 
     <div class="research-item">
         <a href="pages/researches/OwlCam_Project.html">
-            <img src="./assets/research/gifs/projects-index-OwlCam-anim.gif" alt="The OwlCam Project">
+            <img src="./assets/research/gifs/projects-index-OwlCam-anim.gif" alt="The OwlCam Project" loading="lazy">
             <p>The OwlCam Project</p>
         </a>
     </div>
     <div class="research-item">
         <a href="pages/researches/Contextual_Emergence_of_Object_Saliency.html">
-            <img src="./assets/research/gifs/ASD_1_27_27491_Web1.gif" alt="Contextual Emergence of Object Saliency">
+            <img src="./assets/research/gifs/ASD_1_27_27491_Web1.gif" alt="Contextual Emergence of Object Saliency" loading="lazy">
             <p>Contextual Emergence of Object Saliency</p>
         </a>
     </div>
     <div class="research-item">
         <a href="pages/researches/Symmetry_And_Pose_Estimation_In_3D_Data.html">
-            <img src="./assets/research/gifs/3d_chair-768x576.jpg" alt="Symmetry and Pose Estimation in 3D Data">
+            <img src="./assets/research/gifs/3d_chair-768x576.jpg" alt="Symmetry and Pose Estimation in 3D Data" loading="lazy">
             <p>Symmetry and Pose Estimation in 3D Data</p>
         </a>
     </div>
     <div class="research-item">
         <a href="pages/researches/Scene_Gist_Recognition_from_Perceptual_Relations.html">
-            <img src="./assets/research/gifs/projects-index-gist-anim.gif" alt="Scene Gist Recognition from Perceptual Relations">
+            <img src="./assets/research/gifs/projects-index-gist-anim.gif" alt="Scene Gist Recognition from Perceptual Relations" loading="lazy">
             <p>Scene Gist Recognition from Perceptual Relations</p>
         </a>
     </div>
     <div class="research-item">
         <a href="pages/researches/Polar_Representation_of_Motion_and_Optical_Flow.html">
-            <img src="./assets/research/gifs/projects-index-polar-anim.gif" alt="Polar Representation of Motion and Optical Flow">
+            <img src="./assets/research/gifs/projects-index-polar-anim.gif" alt="Polar Representation of Motion and Optical Flow" loading="lazy">
             <p>Polar Representation of Motion and Optical Flow</p>
         </a>
     </div>
     <div class="research-item">
         <a href="pages/researches/Shape_from_Specular_Flow.html">
-            <img src="./assets/research/gifs/projects-index-sfsf-anim1.gif" alt="Shape from Specular Flow">
+            <img src="./assets/research/gifs/projects-index-sfsf-anim1.gif" alt="Shape from Specular Flow" loading="lazy">
             <p>Shape from Specular Flow</p>
         </a>
     </div>
     <div class="research-item">
         <a href="pages/researches/Free_Boundary_Conditions_Active_Contours.html">
-            <img src="./assets/research/gifs/projects-index-FBCAC-anim.gif" alt="Free Boundary Conditions Active Contours">
+            <img src="./assets/research/gifs/projects-index-FBCAC-anim.gif" alt="Free Boundary Conditions Active Contours" loading="lazy">
             <p>Free Boundary Conditions Active Contours</p>
         </a>
     </div>
     <div class="research-item">
         <a href="pages/researches/Perceptual_singularities.html">
-            <img src="./assets/research/gifs/projects-index-PSinOBTS-anim.gif" alt="Perceptual Singularities without Feature Gradient">
+            <img src="./assets/research/gifs/projects-index-PSinOBTS-anim.gif" alt="Perceptual Singularities without Feature Gradient" loading="lazy">
             <p>Perceptual Singularities without Feature Gradient</p>
         </a>
     </div>
