--- a/pages/footer.html
+++ b/pages/footer.html
@@ -8,7 +8,7 @@
     <div class="contact-info">
         <p><i class="fas fa-envelope"></i> Email: <a href="mailto:ICVL@cs.bgu.ac.il">ICVL@cs.bgu.ac.il</a></p>
         <p><i class="fas fa-user"></i> Director: <a href="mailto:ben-shahar@cs.bgu.ac.il">Prof. Ohad Ben-Shahar</a></p>
-        <p><i class="fas fa-user"></i> Seminar Coordinator: <a href="mailto:brahan@post.bgu.ac.il">Brahan Wassan</a></p>
+        <p><i class="fas fa-user"></i> Seminar Coordinator: <a href="mailto:brahan@post.bgu.ac.il">Brahan W. Aklilu</a></p>
         <p><i class="fas fa-user"></i> Web Master: <a href="mailto:alfit@post.bgu.ac.il">Tal Alfi</a></p>
     </div>
     <div class="address">
