Add Eye Movement Biases research page

--- a/pages/research.html
+++ b/pages/research.html
@@ -18,6 +18,12 @@
 <p>Some (though not all) of our research projects include databases, code, online experimental systems for data collection, or just nice stimuli or demos worth showing. Please visit those projects with online material in the links below but do not forget to visit the lab's publication page for all our other research projects.</p>
 <div class="research-grid">
     <div class="research-item">
+        <a href="pages/researches/Eye-Movement-Biases.html">
+            <img src="./assets/research/Eye-Movement-Biases/fig1_aggregated_fixations.png" alt="Eye Movement Biases" loading="lazy">
+            <p>Eye Movement Biases</p>
+        </a>
+    </div>
+    <div class="research-item">
         <a href="pages/researches/Multi-Phase-Relaxation.html">
             <img src="./assets/research/gifs/multi-phase_rl_for_puzzles_featured_image-1.gif" alt="Multi-Phase Relaxation Labeling for Square Jigsaw Puzzle Solving" loading="lazy">
             <p>Multi-Phase Relaxation Labeling for Square Jigsaw Puzzle Solving</p>
